--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ string_class.xcodeproj/xcshareddata/xcschemes/string_class.xcscheme
 string_class.xcodeproj/xcuserdata/kandasoft.xcuserdatad/xcschemes/xcschememanagement.plist
 
 string_class.xcodeproj/xcuserdata/tyzhinov_roma.xcuserdatad/xcschemes/xcschememanagement.plist
+
+string_class.xcodeproj/xcuserdata/kandasoft.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
